{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 8,
  "lineage": "5f56054a-5b1d-fd8b-a822-3220bef062b8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dev_ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:934545598565:internet-gateway/igw-0c7f1b27e49507b67",
            "id": "igw-0c7f1b27e49507b67",
            "owner_id": "934545598565",
            "region": "ap-south-1",
            "tags": {
              "Name": "dev_allow_internet"
            },
            "tags_all": {
              "Name": "dev_allow_internet"
            },
            "vpc_id": "vpc-098b4c30d00c807ee"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:934545598565:route-table/rtb-0cd5607f40bcae516",
            "id": "rtb-0cd5607f40bcae516",
            "owner_id": "934545598565",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c7f1b27e49507b67",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev_ec2_allow_traffic"
            },
            "tags_all": {
              "Name": "dev_ec2_allow_traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-098b4c30d00c807ee"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "934545598565",
            "id": "rtb-0cd5607f40bcae516",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.dev_ig",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_rt_ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-074e0b04863c55692",
            "region": "ap-south-1",
            "route_table_id": "rtb-0cd5607f40bcae516",
            "subnet_id": "subnet-0b4195fb9d6cc8758"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.dev_ig",
            "aws_route_table.dev_rt",
            "aws_subnet.dev_subnet",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dev_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:934545598565:security-group/sg-0e97ccf0a7dbc0b1d",
            "description": "dev_openalltraffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e97ccf0a7dbc0b1d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dev_open",
            "name_prefix": "",
            "owner_id": "934545598565",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-098b4c30d00c807ee"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "934545598565",
            "id": "sg-0e97ccf0a7dbc0b1d",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:934545598565:subnet/subnet-0b4195fb9d6cc8758",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b4195fb9d6cc8758",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "934545598565",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "dev_subnet"
            },
            "tags_all": {
              "Name": "dev_subnet"
            },
            "vpc_id": "vpc-098b4c30d00c807ee"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "934545598565",
            "id": "subnet-0b4195fb9d6cc8758",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:934545598565:vpc/vpc-098b4c30d00c807ee",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-01b3cafdca4e20519",
            "default_route_table_id": "rtb-03a8905d33c2a3f40",
            "default_security_group_id": "sg-09863cd0500767647",
            "dhcp_options_id": "dopt-0829490fb161949df",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-098b4c30d00c807ee",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03a8905d33c2a3f40",
            "owner_id": "934545598565",
            "region": "ap-south-1",
            "tags": {
              "Name": "dev_vpc"
            },
            "tags_all": {
              "Name": "dev_vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}